Se pueden agregar multiples imagenes en el modulo de notas.

--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -1,6 +1,4 @@
-<?xml version ="1.0" encoding ="utf-8"?><!--  Learn More about how to use App Actions: https://developer.android.com/guide/actions/index.html -->
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <files-path
-        name="files"
-        path="." />
+    <files-path name="internal_files" path="." />
+    <external-path name="external_files" path="Android/data/com.example.proyectofinalmovil/files/" />
 </paths>
